--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "description": "",
   "type": "commonjs",
   "scripts": {
-    "start": "node dist/bot.js",
+    "start": "node build/bot.js",
     "dev": "ts-node-dev --respawn --transpile-only src/bot.ts",
-    "build": "rm -rf dist && tsc",
+    "build": "rm -rf build && tsc && cp -R src/locales build/locales",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^24.0.10",
+    "@types/node": "^24.0.15",
     "dotenv": "^17.0.1",
     "eslint": "^9.30.1",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.1",
+    "mysql2": "^3.14.2",
     "prettier": "^3.6.2",
     "telegraf": "^4.16.3",
     "telegraf-i18n": "^6.6.0",
